--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }
 serde = { version = "1.0.195", default-features = false, features = ["derive"] }
 
+[dev-dependencies]
+serde-json-core = "0.5.1"
+half = {version = "2.3.1", features = ["num-traits"]}
+
 [features]
 default = ["libm"]
 libm = ["num-traits/libm"]
