fixing pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,8 @@ repos:
         entry: just generate-readme
         language: system
         pass_filenames: false
+      - id: cargo-doc
+        name: cargo-doc
+        entry: just generate-doc
+        language: system
+        pass_filenames: false
