--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "Floco validates floats against constraints."
 documentation = "rileyleff.com"
 readme = "README.md"
-homepage = "rileyleff.com"
+homepage = "https://github.com/RileyLeff/floco?tab=readme-ov-file"
 repository = "https://github.com/RileyLeff/floco"
 license = "MIT OR Apache-2.0"
 keywords = ["float", "validation", "wrapper", "utility"]
