--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "floco"
 version = "0.1.0"
 edition = "2021"
 description = "Floco validates floats against constraints."
-documentation = "rileyleff.com"
+documentation = "https://docs.rs/floco/latest/floco/index.html"
 readme = "README.md"
 homepage = "https://github.com/RileyLeff/floco"
 repository = "https://github.com/RileyLeff/floco"
